--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="org.esiea.shanmugam_sadaoui.recipecenter">
-<uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -22,8 +22,10 @@
         </activity>
 
         <service
-            android:name=".GetRecipesServices"
-            android:exported="false"></service>
+            android:name="org.esiea.shanmugam_sadaoui.GetRecipesServices"
+            android:exported="false" />
+
+        <activity android:name=".ViewActivity"></activity>
     </application>
 
 </manifest>
